# calcslive-agent-for-maf

./: .gitignore  README.md  dev.bat  dev.ps1  mcp-list.json
.claude/plans/: hackathon-plan.md
.e3d/changelogs/: 2602.1.md
.e3d/chat-logs/antigravity-gemini/: implementation_plan.v1.md
azure-agent/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  agent_core.py  app.py  app_cloud.py  app_shared.py  calcslive_tools.py  pyproject.toml  requirements.txt
azure-agent/.streamlit/: config.toml
deliverables/: architecture copy.excalidraw  architecture-content.md  architecture-excalidraw-layout.md  architecture-tool-choice.md  architecture.excalidraw  cover.excalidraw  demo-outline.md  final-checklist.md  submission-summary.md  terminology.md  visual-guidance.md  workflow-flowcharts.md  workflows.excalidraw  workflows.md
deliverables/samples/: ExampleCalc-01.xlsm
demo/: demo_script.md
deploy/: config.aca.dev.json  config.dev.json  deploy-cloud-beta-aca.ps1  deploy-cloud-beta.ps1
docs/: architecture-diagram-spec.md  cloud-beta-rollout.md  developer-setup-guide.md  generate_architecture_png.py  odr-runbook.md  odr-troubleshooting.md  odr-validation-log-2026-02-27.md  odr-verification-checklist.md  reference-architecture.md  submission-evidence.md
excel-bridge/: README.md  excel_api.py  live_watcher.py  main.py  pyproject.toml  requirements.txt  test_excel_api.py
excel-mcp/: README.md  manifest.json  pyproject.toml  server.py
